# sqlalchemy-mptt-v2

./: .gitignore  pyproject.toml  readme.CN.md
sqlalchemy_mptt_2/: __init__.py  exceptions.py  managers.py  mixins.py  query.py  utils.py
tests/: basic_usage.py  test_managers.py  test_mixins.py  test_utils.py
